Update api doc.
